--- a/package.json
+++ b/package.json
@@ -17,18 +17,24 @@
   },
   "homepage": "https://github.com/AnexHeil/Medicine-2.0#readme",
   "dependencies": {
-    "bcrypt": "^3.0.4",
+    "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
-    "express": "^4.16.4",
-    "express-handlebars": "^3.0.2",
-    "express-session": "^1.15.6",
+    "exceljs": "^1.11.0",
+    "express": "^4.17.0",
+    "express-fileupload": "^1.1.4",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.1",
+    "formidable": "^1.2.1",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.5.10",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "read-excel-file": "^3.0.2",
+    "xlsx": "^0.14.3"
   }
 }
